--- a/index.html
+++ b/index.html
@@ -36,35 +36,23 @@
 	<datalist id="listMonster" data-bind="foreach: data.monster">
 		<option data-bind="value: name"></option>
 	</datalist>
-
-	<datalist id="listAreas" data-bind="foreach: $root.OPTIONS().areas">
-		<option data-bind="value: $data"></option>
+	<datalist id="listEvents" data-bind="foreach: data.events">
+		<option data-bind="value: name, text: location.area()+' - '+location.stage()"></option>
 	</datalist>
+
 	<datalist id="listGearEffect" data-bind="foreach: $root.OPTIONS().gearEffect">
 		<option data-bind="value: $data"></option>
-	</datalist>
-	<datalist id="listItemOther" data-bind="foreach: $root.OPTIONS().itemOther">
-		<option data-bind="value: $data"></option>
-	</datalist>
-	<datalist id="listGearType" data-bind="foreach: $root.OPTIONS().itemTypeGear">
-		<option data-bind="value: $data"></option>
-	</datalist>
-	<datalist id="listChestRarity" data-bind="foreach: $root.OPTIONS().chestRarity">
-		<option data-bind="value: $data, text: $index"></option>
 	</datalist>
 	<datalist id="listItemUse" data-bind="foreach: $root.OPTIONS().itemUse">
 		<option data-bind="value: $data"></option>
 	</datalist>
-	<datalist id="listItemRarity" data-bind="foreach: $root.OPTIONS().itemRarity">
-		<option data-bind="value: $data, text: $index"></option>
+	<datalist id="listItemOre" data-bind="foreach: $root.OPTIONS().itemOre">
+		<option data-bind="value: $data"></option>
+	</datalist>
+	<datalist id="listItemMaterial" data-bind="foreach: $root.OPTIONS().itemMaterial">
+		<option data-bind="value: $data"></option>
 	</datalist>
 
-	<datalist id="listMonsterType">
-		<option value="M">
-		<option value="NM">
-		<option value="HNM">
-		<option value="Boss">
-	</datalist>
 	<datalist id="listStars">
 		<option value="0">-</option>
 		<option value="1">★</option>
@@ -143,10 +131,10 @@
 		<select class="GoalType" data-bind="options: listGoalType, value: type"></select>
 		<span class="inputName monsterType" data-bind="html: monsterType">&nbsp;</span>
 		<input type="text" class="monsterName" placeholder="Monster" data-bind="value: name"/>
-		<button type="button" class="inputBtn btn-primary" data-bind="click: $root.addNewMonster, visible: checkIfNew()">
-			<span class="fa fa-plus"></span>
+		<button type="button" class="inputBtn btn-success" data-bind="click: $root.addNewMonster, visible: isNew()">
+			<span class="fa fa-sign-in"></span>
 		</button>
-		<input type="number" class="goalAmount" data-bind="value: amount, visible: amountShow"/>
+		<input type="number" class="goalAmount" data-bind="value: amount, visible: amountShow()" />
 		<button type="button" class="inputBtn btn-danger" data-bind="click: $parent.removeGoal" tabindex="-1">
 			<span class="fa fa-minus"></span>
 		</button>
@@ -157,22 +145,25 @@
 	<div class="inputBox">
 		<select class="RewardType" data-bind="options: listRewardType, value: type"></select>
 		<!-- ko if: isItem() -->
-		<select class="ItemOther" data-bind="options: listItemOther, value: name"></select>
+		<input list="listItemOre" class="ItemOre" data-bind="value: name, valueUpdate: 'input'"/>
+		<button type="button" class="inputBtn btn-success" data-bind="visible: isNewOre(), click: addNewOre">
+			<span class="fa fa-sign-in"></span>
+		</button>
 		<!-- /ko -->
 		<!-- ko if: isChest() -->
-		<select class="ChestRarity" data-bind="options: listChestRarity, value: name"></select>
-		<button type="button" class="inputBtn btn-primary" data-bind="click: $root.addNewChest" tabindex="-1">
-			<span class="fa fa-plus"></span>
+		<select class="ChestRarity" data-bind="options: $root.OPTIONS().chestRarity, value: name"></select>
+		<button type="button" class="inputBtn btn-success" data-bind="click: $root.addNewChest" tabindex="-1">
+			<span class="fa fa-sign-in"></span>
 		</button>
 		<!-- /ko -->
 		<!-- ko if: isGear() || isLastHit() -->
 		<span class="inputName GearType" data-bind="html: gearType">&nbsp;</span>
-		<input type="text" list="listGear" class="Gear" data-bind="value: name"/>
-		<button type="button" class="inputBtn btn-primary" data-bind="click: $root.addNewGear">
-			<span class="fa fa-plus"></span>
+		<input type="text" list="listGear" class="Gear" data-bind="value: name, valueUpdate: 'input'"/>
+		<button type="button" class="inputBtn btn-success" data-bind="visible: isNewGear(), click: $root.addNewGear">
+			<span class="fa fa-sign-in"></span>
 		</button>
 		<!-- /ko -->
-		<input type="number" class="amount" data-bind="value: amount, visible: amountShow"/>
+		<input type="number" class="amount" data-bind="value: amount, visible: amountShow()"/>
 		<button type="button" class="inputBtn btn-danger" data-bind="click: $parent.removeReward" tabindex="-1">
 			<span class="fa fa-minus"></span>
 		</button>
@@ -192,8 +183,8 @@
 						<input type="text" data-bind="value: name" placeholder="Name">
 					</div>
 					<div class="inputBox">
-						<input type="text" class="ItemRarity" list="listItemRarity" data-bind="value: rarity"/>
-						<input type="text" class="Stars" list="listStars" data-bind="value: stars"/>
+						<select class="ItemRarity" data-bind="options: $root.OPTIONS().itemRarity, value: rarity"></select>
+						<input type="text" class="Stars" list="listStars" data-bind="value: stars, valueUpdate: 'input'"/>
 						<span class="inputName starsText" data-bind="text: starsText"></span>
 					</div>
 					<div class="inputBox">
@@ -209,12 +200,12 @@
 						<!-- ko foreach: groupedEffects().other -->
 						<div class="inputBox effect">
 							<input class="inputName GearEffect" type="text" list="listGearEffect" placeholder="Effect" data-bind="value: name, valueUpdate: 'input'"/>
-							<button type="button" class="inputBtn btn-primary" data-bind="visible: checkIfNew, click: addNew">
-								<span class="fa fa-plus"></span>
+							<button type="button" class="inputBtn btn-success" data-bind="visible: isNewEffect(), click: addNewEffect">
+								<span class="fa fa-sign-in"></span>
 							</button>
 							<input type="number" class="stat" data-bind="value: value"/>
 							<button type="button" class="inputBtn btn-danger" data-bind="click: $parent.removeEffect" tabindex="-1">
-								<span class="fa fa-remove"></span>
+								<span class="fa fa-minus"></span>
 							</button>
 						</div>
 						<!-- /ko -->
@@ -244,8 +235,8 @@
 					<div class="inputBox">
 						<span type="text" class="inputName GearType" data-bind="css: 'bg-'+itemInfo().rarity.toLowerCase(),html: itemInfo().type">&nbsp;</span>
 						<input type="text" list="listGear" class="Gear" placeholder="Gear" data-bind="value: item, valueUpdate: 'input'"/>
-						<button type="button" class="inputBtn btn-primary" data-bind="click: $root.addNewGear, visible: isNewItem()">
-							<span class="fa fa-plus"></span>
+						<button type="button" class="inputBtn btn-success" data-bind="visible: isNewGear(), click: $root.addNewGear">
+							<span class="fa fa-sign-in"></span>
 						</button>
 					</div>
 				</div>
@@ -291,39 +282,30 @@
 				<div class="col-xs-12 col-sm-4" data-bind="template: 'preset-locations'"></div>
 				<div class="col-xs-12 col-sm-2">
 					<div class="inputBox block">
-						<input type="text" class="MonsterType" list="listMonsterType" data-bind="value: type, valueUpdate: 'input'"/>
+						<select class="MonsterType" data-bind="options: $root.OPTIONS().monsterType, value: type"></select>
 					</div>
 					<div class="inputBox block">
 						<input type="text" class="monsterName" data-bind="value: name" placeholder="Name">
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-2">
+				<div class="col-xs-12 col-sm-4">
+					<!-- ko foreach: drops -->
+						<div class="inputBox">
+							<span class="inputName" data-bind="text: $data"></span>
+							<button type="button" class="inputBtn btn-danger" data-bind="click: $parent.removeDrop" tabindex="-1">
+								<span class="fa fa-minus"></span>
+							</button>
+						</div>
+						<br>
+					<!-- /ko -->
 					<div class="inputBox">
-						<span class="inputName difficulty">Singleplayer</span>
-						<input type="number" min="0" class="lv" data-bind="value: lv.sp.min" placeholder="Lv">
-						<span class="inputName">-</span>
-						<input type="number" min="0" class="lv" data-bind="value: lv.sp.max" placeholder="Lv">
-					</div>
-					<br>
-					<div class="inputBox">
-						<span class="inputName difficulty">Normal</span>
-						<input type="number" min="0" class="lv" data-bind="value: lv.n.min" placeholder="Lv">
-						<span class="inputName">-</span>
-						<input type="number" min="0" class="lv" data-bind="value: lv.n.max" placeholder="Lv">
-					</div>
-					<br>
-					<div class="inputBox">
-						<span class="inputName difficulty">Hard</span>
-						<input type="number" min="0" class="lv" data-bind="value: lv.h.min" placeholder="Lv">
-						<span class="inputName">-</span>
-						<input type="number" min="0" class="lv" data-bind="value: lv.h.max" placeholder="Lv">
-					</div>
-					<br>
-					<div class="inputBox">
-						<span class="inputName difficulty">Nightmare</span>
-						<input type="number" min="0" class="lv" data-bind="value: lv.nm.min" placeholder="Lv">
-						<span class="inputName">-</span>
-						<input type="number" min="0" class="lv" data-bind="value: lv.nm.max" placeholder="Lv">
+						<input type="text" class="ItemMaterial" list="listItemMaterial"placeholder="Drop" data-bind="value: dropToAdd, valueUpdate: 'input'"/>
+						<button type="button" class="inputBtn btn-success" data-bind="visible: isNewMaterial(), click: addNewMaterial">
+							<span class="fa fa-sign-in"></span>
+						</button>
+						<button type="button" class="inputBtn btn-primary" data-bind="click: addDrop">
+							<span class="fa fa-plus"></span>
+						</button>
 					</div>
 				</div>
 			</fieldset>
@@ -369,7 +351,7 @@
 				</div>
 			</a></li>
 			<li>
-				<a href="#export">
+				<a href="#">
 					<div class="inputBox smallBtn">
 						<button type="button" class="inputBtn btn-primary" title="Sort Data" data-bind="click: $root.sortData">
 							<span class="fa fa-sort"></span>
