--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 	<meta charset="UTF-8">
 	<title>Sword Art Online Hollow Realization - Guide</title>
 
-	<link rel="stylesheet" href="resources/vendor/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="resources/vendor/bootstrap-3.3.7/dist/css/bootstrap.css">
 	<!--<link rel="stylesheet" href="resources/vendor/bootstrap/css/bootstrap-theme.min.css">-->
 	<link rel="stylesheet" href="resources/vendor/fontAwesome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="resources/css/styles.css">
 
 	<script src="resources/vendor/jquery/jquery-2.2.2.min.js"></script>
-	<script src="resources/vendor/bootstrap/js/bootstrap.min.js"></script>
-	<script src="resources/vendor/bootstrap/plugins/context-menu.js"></script>
+	<script src="resources/vendor/bootstrap-3.3.7/dist/js/bootstrap.min.js"></script>
+	<script src="resources/vendor/bootstrap-3.3.7/plugins/context-menu.js"></script>
 	<script src="resources/vendor/bootstrap3-dialog-1.35.3/dist/js/bootstrap-dialog.min.js"></script>
 	<script src="resources/vendor/knockout/knockout-3.4.0.min.js"></script>
 
