--- a/index.html
+++ b/index.html
@@ -107,6 +107,13 @@
 			<div class="inputBox location">
 				<select class="Areas" data-bind="options: listAreas, value: area, event: {change:setLast}"></select>
 				<select class="Stages" data-bind="options: listStages, value: stage, event: {change:setLast}"></select>
+			</div>
+			<div class="inputBox">
+				<input type="number" class="lv" data-bind="value: lvMin" placeholder="lv"/>
+				<span class="inputName">-</span>
+				<input type="number" class="lv" data-bind="value: lvMax" placeholder="lv"/>
+			</div>
+			<div class="inputBox">
 				<button type="button" class="inputBtn btn-danger" data-bind="click: $parent.removeLocation">
 					<span class="fa fa-minus"></span>
 				</button>
